Marginal Laplace, a little software

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -85,7 +85,7 @@ Each project in this thesis, as well as the thesis itself, is accompanied by $\t
 
 ## Chapter overview
 
-The structure of this thesis is as follows:
+The structure of this thesis (Figure \@ref(fig:chapter-flowchart)) is as follows:
 
 * Chapter \@ref(hiv-aids): I begin by providing background on the HIV/AIDS epidemic, as well as describing the challenges faced by surveillance efforts.
 * Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation.
@@ -99,11 +99,8 @@ I estimate the size of behavioural risk groups across priority countries to enab
 Motivated by this model, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
 I apply the method to data from Malawi, and analyse the consequences of inference method choice for policy relevant outcomes.
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
-* Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
+* Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-```{r chapter-flowchart, fig.cap="Flowchart presenting the recommended chapter dependencies for this thesis. The dashed line represents a recommended, but not required dependency."}
+```{r chapter-flowchart, fig.cap="The chapters in this thesis are structured to depend on each other. The dashed line represents a recommended, but not required dependency. Though chronological order is recommended, Chapter 4, Chapter 5 and Chapter 6 may be read in any order as, for the most part, they correspond to separable research projects."}
 knitr::include_graphics("figures/chapter-flowchart.pdf")
 ```
-
-Figure \@ref(fig:chapter-flowchart) gives the dependency structure for the chapters.
-Though chronological order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order as, for the most part, they correspond to separable research projects.
