--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -74,16 +74,18 @@ art_deaths_averted <- 16.5 * 1e6
 condom_infections_averted <- 117 * 1e6
 ```
 
+<!-- The number of new infections estimated to have been averted by ART. -->
+
 * Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
 By taking ART daily, a person living with HIV can live a full and healthy life.
 Of the `r custom_numbers_to_words(plhiv2022)` people living with HIV (PLHIV) in 2022, around `r coverage2022`% were accessing ART.
-As such, ART is estimated to have averted `r custom_numbers_to_words(art_deaths_averted)` AIDS-related deaths.
-Further, if the virus is undetectable then it cannot be transmitted sexually [@cohen2011prevention].
-For this reason, treatment also operates as prevention (TaSP).
-ART has been estimated to have averted this many new infections.
+ART is estimated to have averted `r custom_numbers_to_words(art_deaths_averted)` AIDS-related deaths.
+Further, ART reduces the amount of virus in the blood and genital secretions.
+If the virus is undetectable then there is considerable evidence that it cannot be transmitted sexually [@cohen2011prevention].
+For this reason, as well as saving lives, treatment also operates as prevention (TaSP).
 * Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as *Chlamydia trachomatis*, *Neisseria gonorroeae*, syphilis, and *Trichomonas vaginalis*.
 There has been a significant scale-up of condom usage since 1990, which is estimated to have averted `r custom_numbers_to_words(condom_infections_averted)` new HIV infections [@stover2021impact].
-However, there remain significant and difficult to close gaps in condom use at last high-risk sex.
+However, there remain significant and difficult to close gaps in the proportion of individuals reporting they used a condom during their last high-risk sexual encounter.
 * Voluntary medical male circumcision (VMMC), in which the foreskin is completely removed surgically, has been found to provide partial protection against female-to-male HIV transmission, resulting in a reduction of HIV incidence in men by 50-60% [@auvert2005randomized; @gray2007male; @bailey2007male].
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are drugs which can be taken before and after exposure to prevent transmission.
 They are primarily useful in high risk settings.
