--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -3,7 +3,7 @@ I am grateful for the research environment offered by the HIV Inference Group, M
 The Effective Altruism community provided me a framework for deciding what to work on.
 Thanks to Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab, and Alex Stringer for hosting my visit to the University of Waterloo.
 Thank you to my parents and grandparents.
-Finally, I am grateful for the Bill & Melinda Gates Foundation and EPSRC for funding this research.
+This research was possible due to funding by the Bill & Melinda Gates Foundation and EPSRC.
 
 \begin{flushright}
 Adam Howes \\
