--- a/references.bib
+++ b/references.bib
@@ -1092,3 +1092,18 @@ URL= {https://www.r-inla.org/faq},
   publisher={Taylor \& Francis}
 }
 
+@book{davis1975methods,
+  title={Methods of numerical integration},
+  author={Davis, Philip J and Rabinowitz, Philip},
+  year={1975},
+  publisher={Academic Press}
+}
+
+@article{bilodeau2022stochastic,
+  title={Stochastic convergence rates and applications of adaptive quadrature in Bayesian inference},
+  author={Bilodeau, Blair and Stringer, Alex and Tang, Yanbo},
+  journal={Journal of the American Statistical Association},
+  pages={1--11},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
